<resources>
    <string name="app_name">Smack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- Initial header title -->
    <string name="nav_login_title">Login</string>

    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="generate_background_colour">Generate background colour</string>
    <string name="avatar_image">Avatar image</string>
    <string name="tap_to_generate_user_avatar">Tap to generate user avatar.</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="user_name">user name</string>
    <string name="create_user">Create user</string>
    <string name="send_message">Send message</string>
    <string name="message">message:</string>
    <string name="please_log_in">Please log in.</string>
    <string name="user_image">User image</string>
    <string name="login">Login</string>
    <string name="Logout">Logout</string>
    <string name="add_channel_button">Add channel button</string>
    <string name="add_channel">Add channel.</string>
    <string name="channel_name">Channel name</string>
    <string name="channel_description">Channel description</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="navigation_header_image">Navigation header image</string>
    <string name="channel_name_hash">#%1$s</string>
</resources>