<?xml version="1.0" encoding="utf-8"?>
<!--
ISSUE! <layout> tag does not work, reason appears to be a Java issue.
We get a build error code 38 and a null pointer exception.
Further investigation, two things have been found, first the NPE error is
known and is caused by incomplete class paths.
See https://bugs.java.com/bugdatabase/view_bug.do?bug_id=8206917
See https://bugs.java.com/bugdatabase/view_bug.do?bug_id=8177068
Second oddity, if androidx.constraintlayout.widget.ConstraintLayout is
replaced with just ConstraintLayout, the studio lint complains that
ConstraintLayout cannot be a child of <layout>!
Odd since Google docs shows a layout which has a <ConstraintLayout> that
is a child of <layout>!
See https://developer.android.com/topic/libraries/data-binding
Plan B, it appears as if we cannot use data binding in the XML layout (due
to the bug) so we will have to do it in code.
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    >
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/mainFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment"
    android:orientation="horizontal">
-->
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/mainFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--
Course deviation, this was originally in activity_main, now moved to this
"main" fragment.
-->
    <TextView
        android:id="@+id/mainChannelName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/please_log_in"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/messageTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/message"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="message" />

    <!--
    XML lint issues, the sendMsgBtnClicked on click handler
    exists in the MainActivity and is operational.
    However the XML lint claims it does not exist!
    Added tools:ignore="OnClick" to suppress the error.
    -->
    <ImageButton
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:onClick="sendMsgBtnClicked"
        android:src="@drawable/ic_menu_send"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/send_message"
        tools:ignore="OnClick" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messageListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/messageTextField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainChannelName" />
</androidx.constraintlayout.widget.ConstraintLayout>
<!--</layout>-->